refactor: :sparkles: refactor

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -37,6 +37,13 @@
         </p>
         <button type="submit">Submit</button>
     </form>
+    <hr>
+    {% for todo in todos %}
+        <div class="todo">
+            <p>{{ todo['content'] }} <i>({{ todo['degree']}})</i></p>
+        </div>
+    {% endfor %}
+
     </div>
 </body>
 </html>
