--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -38,9 +38,14 @@
         <button type="submit">Submit</button>
     </form>
     <hr>
+    
     {% for todo in todos %}
         <div class="todo">
             <p>{{ todo['content'] }} <i>({{ todo['degree']}})</i></p>
+            <form method="POST" action="{{ url_for('delete', id=todo['_id']) }}" >
+                <input type="submit" value="Delete Todo"
+                       onclick="return confirm('Are you sure you want to delete this entry?')">
+            </form>
         </div>
     {% endfor %}
 
